# eGBox

./: CMakeLists.txt  Cargo.toml  README.md  bindings.h  build.rs  start.sh
access_policy/: config.toml
policy/: config.toml  rule_testing.toml
src/: audit.rs  bindings.rs  lib.rs  log.rs  main.rs  uprobe_ext.rs  utils.rs
src/bpf/: bpfESX.bpf.c
src/bpf/include/: audit.h  const.h  helpers.h  kernel_defs.h  policy.h  structs.h  user_types.h
src/miner/: miner.rs  rule.rs
src/policy/: config.rs  mod.rs  rule.rs
src/subcommands/: daemon.rs  minner.rs  mod.rs
