[package]
name = "bpfESX"
version = "0.1.0"
authors = ["Yuan Zhong"]
edition = "2018"

[dependencies]
libbpf-rs = "0.18.0"
anyhow = "1.0.49"
pod = "0.5.0"
clap = "2.33.3"
libc = "0.2.81"
daemonize = "0.4.1"
log = "0.4.11"
goblin = "0.5.4"
bitflags = "1.2.1"
serde_yaml = "0.9.13"
serde = { version = "1.0.118", features = ["derive"] }
serde_derive = "1.0.118"
glob = "0.3.0"
config = "0.13.2"
nix = "0.25.0"
regex = "1.4.3"
lazy_static = "1.4.0"
enum_dispatch = "0.3.7"
log4rs = "1.1.1"
procfs = "0.14.1"
fs2 = "0.4.3"
plain = "0.2.3"
serde_json = "1.0.64"
toml = "0.5.8"
chrono = "0.4"
object = "0.29.0"
[build-dependencies]
bindgen = "0.60.1"
glob = "0.3.0"
libbpf-cargo = "0.12.0"
uname = "0.1.1"
tempfile = "3.3.0"
fp-growth = "0.1"
time = "0.3.15"
chrono = "0.4.26" # Used for setting DateTimes
bson = { version = "2.6.1", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
tokio = "1.26.0"

futures = "0.3"
rand = "0.8.5"
[dependencies.mongodb]
version = "2.4.0"
features = ["tokio-sync"]